# llm-inference-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: PRD.md
gateway/: config.py  main.py
gateway/api/: models.py
gateway/api/routes/: batch.py  health.py  jobs.py  metrics.py  process.py
gateway/cache/: semantic.py
gateway/limiter/: rate_limiter.py
gateway/observability/: logging.py  metrics.py
gateway/provider/: base.py  claude_llm.py  factory.py  mock_llm.py
gateway/queue/: priority_queue.py  wal.py
gateway/router/: classifier.py  router.py
gateway/storage/: db.py  models.py
gateway/storage/migrations/: 001_initial.sql
gateway/worker/: pool.py  processor.py
infra/grafana/dashboards/: gateway.json
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: load_test.py
tests/: conftest.py
tests/test_api/: test_process.py
tests/test_cache/: test_semantic.py
tests/test_limiter/: test_rate_limiter.py
tests/test_queue/: test_priority_queue.py
tests/test_worker/: test_crash_recovery.py
